My First page commit

--- a/post/2017-03-05-february-28-2017-in-class-project.Rmd
+++ b/post/2017-03-05-february-28-2017-in-class-project.Rmd
@@ -108,8 +108,8 @@ return(c(mean1,mean2))
 ```{r}
 month=matrix(1:17,nrow = 17, ncol = 1)
 result=apply(month,1,function(x) average_peer_pressure(x))
-plot(result[1,1:17],type="l")
-lines(result[2,1:17],type="l",col="red",ylab="Proportion")
+plot(result[1,1:17],type="l",ylab="Proportion")
+lines(result[2,1:17],type="l",col="red")
 legend("bottomright",c("in that month","after that month"),lwd=1,col=c(1,2))
 difference=result[1,1:17]-result[2,1:17]
 plot(difference,type="l",ylab="Proportion Difference")
